# oxcode

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  dist-workspace.toml  justfile  rustfmt.toml  server.json  taplo.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  release-notes.yml  release.yml
.raindrop/: agents.yaml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
crates/oxcode-cli/: Cargo.toml  README.md
crates/oxcode-cli/src/: lib.rs  main.rs  mcp.rs  update.rs
crates/oxcode-cli/tests/: cli.rs  multiprocess.rs  oxgraph_native.rs
crates/oxcode-core/: Cargo.toml  README.md
crates/oxcode-core/src/: cache.rs  error.rs  format.rs  lib.rs  manifest.rs  nav.rs  paths.rs  resolve.rs  scan.rs  store.rs
crates/oxcode-core/src/extract/: cargo.rs  cst.rs  embedded.rs  go.rs  grammar.rs  mod.rs  profile.rs  profiles.rs  query_extractor.rs  rust.rs  scope.rs  typescript.rs  walker.rs
crates/oxcode-core/src/extract/queries/: c.scm  cpp.scm  csharp.scm  dart.scm  java.scm  kotlin.scm  lua.scm  objc.scm  pascal.scm  php.scm  python.scm  ruby.scm  scala.scm  swift.scm
crates/oxcode-core/src/store/: oxgraph.rs
crates/oxcode-core/src/store/oxgraph/: write.rs
crates/oxcode-mcp/: Cargo.toml  README.md
crates/oxcode-mcp/src/: main.rs  server.rs
crates/oxcode-model/: Cargo.toml  README.md
crates/oxcode-model/src/: extract.rs  ids.rs  index.rs  kind.rs  lib.rs  macros.rs  report.rs  schema.rs  selector.rs  span.rs
docs/: agent-eval-methodology.md  agent-eval-results.md
fixtures/smoke-rust/: Cargo.toml
fixtures/smoke-rust/src/: lib.rs
npm/: README.md  package.json
prompts/: common.md
prompts/arms/: codegraph-cli.md  empty.md  oxcode-cli.md  oxcode-mcp.md
scripts/agent-eval/: analyze-oxcode-failures.mjs  bench-rust.sh  clean-suite.sh  codex-jsonl-to-otlp.mjs  compare-codegraph.mjs  export-metrics.mjs  grade-answer.mjs  install-codex-auth.mjs  lib.mjs  list-tasks.mjs  promote-to-golden.mjs  render-prompt.mjs  replay-server.mjs  run-codex-arm.sh  run-timed-command.mjs  smoke.sh  test-timing-metrics.mjs  validate-smoke.mjs  workshop-url.mjs  write-run-metadata.mjs
scripts/bench/: oxcode-output-checks.sh  oxcode-perf.sh
tasks/: rust.yaml  smoke.yaml
