[workspace]
members = ["crates/oxcode-core", "crates/oxcode-model", "crates/oxcode-cli"]
resolver = "3"

[workspace.package]
authors = ["oxcode contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/oxcode/oxcode"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.18"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
# TEMPORARY local path dep onto the new oxgraph WAL engine (base+overlay+WAL+mmap,
# branch overhaul/oxgdb-wal-engine, oxgraph PR #20). Must be repointed to a
# published oxgraph version once that branch merges and publishes (same release
# coordination as before).
oxgraph = { path = "../oxgraph/crates/oxgraph", features = ["db", "graph", "topology"] }
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "1.1.2"
tree-sitter-language-pack = "1.8.1"
