[workspace]
members = ["crates/oxcode-core", "crates/oxcode-model", "crates/oxcode-cli"]
resolver = "3"

[workspace.package]
authors = ["oxcode contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/oxgraph/oxcode"
homepage = "https://github.com/oxgraph/oxcode"
keywords = ["tree-sitter", "code-graph", "mcp", "code-search", "indexing"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.18"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
oxgraph = { version = "0.4.0", features = ["db", "graph", "topology"] }
predicates = "3.1.3"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
streaming-iterator = "0.1.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
toml = "1.1.2"
tree-sitter = "0.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# TEMPORARY: oxgraph 0.4.0 is not yet published; resolve the whole family from
# the sibling checkout (on the 0.4 stack tip). Delete this table when 0.4.0
# lands on crates.io.
[patch.crates-io]
oxgraph = { path = "../oxgraph/crates/oxgraph" }
