[package]
name = "oxcode"
version = "0.1.0"
description = "CLI for generating and querying code graphs."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
oxcode-core = { path = "../oxcode-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
