[package]
name = "oxcode-cli"
version = "0.1.2"
description = "Index source code into a graph and serve it to coding agents — `oxcode` CLI."
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The crates.io package is `oxcode-cli` (the bare `oxcode` name is taken), but the
# installed binary is `oxcode`.
[[bin]]
name = "oxcode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axoupdater.workspace = true
clap.workspace = true
oxcode-core = { path = "../oxcode-core", version = "0.1.2" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
# The MCP integration tests in `src/mcp.rs` act as an in-process MCP client over
# `tokio::io::duplex`, which needs rmcp's client role. This is dev-only and does
# not change the published binary's feature set.
rmcp = { workspace = true, features = ["client"] }
tempfile.workspace = true
