[package]
name = "oxcode-mcp"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "oxcode-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
oxcode-core = { path = "../oxcode-core" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
