[package]
name = "oxcode-mcp"
version = "0.1.0"
description = "MCP server exposing oxcode's code-intelligence queries to coding agents."
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "oxcode-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
oxcode-core = { path = "../oxcode-core", version = "0.1.0" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
