[package]
name = "oxcode-model"
version = "0.2.0"
description = "Storage-neutral code graph model types for oxcode."
categories = ["development-tools"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
